crates/taut-rpc-macros/tests/ui/type-on-generic-struct-fail.rs
use taut_rpc::Type;

#[derive(Type)]
struct G<T> {
    x: T,
}

fn main() {}
